k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-frontend
  template:
    metadata:
      labels:
        app: task-frontend
    spec:
      containers:
        - name: task-frontend
          image: cyrielle123/task-frontend:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: task-frontend
spec:
  selector:
    app: task-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
